<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Jeremie Long

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="key_wallpaper_cat_manage"
            android:title="@string/main_title_wallpapers">
        <Preference
            android:key="key_wallpaper_clear_downloaded"
            android:icon="?attr/ic_action_delete_settings"
            android:summary="@string/pref_wallpaper_settings_clear_downloaded_summary"
            android:title="@string/pref_wallpaper_settings_clear_downloaded_title"/>
        <CheckBoxPreference
            android:key="key_wallpaper_check_hq"
            android:summary="@string/pref_wallpaper_check_hq_summary"
            android:title="@string/pref_wallpaper_check_hq_title"/>
        <CheckBoxPreference
                android:key="key_wallpaper_check_boot"
                android:summary="@string/pref_wallpaper_check_boot_summary"
                android:title="@string/pref_wallpaper_check_boot_title"/>
        <CheckBoxPreference
                android:key="key_wallpaper_check_interval"
                android:summary="@string/pref_wallpaper_check_interval_summary"
                android:title="@string/pref_wallpaper_check_interval_title"/>
        <CheckBoxPreference
                android:key="key_wallpaper_check_save_sort"
                android:summary="@string/pref_wallpaper_check_save_sort_summary"
                android:title="@string/pref_wallpaper_check_save_sort_title"/>
    </PreferenceCategory>

</PreferenceScreen>